--- a/Calculator/res/values/strings.xml
+++ b/Calculator/res/values/strings.xml
@@ -13,13 +13,13 @@
     <string name="buttoncancel">Cancel</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_home_screen">HomeScreenActivity</string>
-    <string name="numberone">Number One</string>
-    <string name="numbertwo">Number Two</string>
-    <string name="buttonresults">Results</string>
-    <string name="buttonadd">Add</string>
-    <string name="buttonsubtraction">Subtraction</string>
-    <string name="buttondivision">Division</string>
-    <string name="buttonmultiply">Multiply</string>
+    <string name="numberone">Number one</string>
+    <string name="numbertwo">Number two</string>
+    <string name="results">Results</string>
+    <string name="buttonadd">+</string>	
+    <string name="buttonsubtraction">-</string>
+    <string name="buttondivision">/</string>
+    <string name="buttonmultiply">x</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
     <string name="title_activity_register">RegisterActivity</string>
     <string name="firstname">First Name</string>
